--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-    "name": "joels-first-chatbot",
-    "repository": "https://github.com/JoelD95/chatbot.git"
+    "name": "PokeChatbot",
+    "repository": "https://github.com/JoelD95/PokeChatbot"
 }
